Fix bug #24575 (sqlite_popen did not request a new resource id when persistent handles were re-used within a request).